# quantum_channel

./: .gitignore  CMakeLists.txt
data/: MPbrownianL100Delta1h0.5gamma0.03D1500.json  MPbrownianL100Delta1h0.5gamma0.03D200.json  MPbrownianL100Delta1h0.5gamma0.03D800.json  MPbrownianL100Delta1h0.5gamma0.06D1500.json  MPbrownianL100Delta1h0.5gamma0.09D200.json  MPbrownianL100Delta1h0.5gamma0.09D400.json  MPbrownianL100Delta1h0.5gamma0.09D800.json  MPbrownianL100Delta1h0.5gamma0.12D1500.json  MPbrownianL100Delta1h0.5gamma0.12D400.json  MPbrownianL100Delta1h0.5gamma0.15D200.json  MPbrownianL100Delta1h0.5gamma0.15D400.json  MPbrownianL100Delta1h0.5gamma0.18D200.json  MPbrownianL100Delta1h0.5gamma0.18D400.json  MPbrownianL100Delta1h0.5gamma0.1D1500.json  MPbrownianL100Delta1h0.5gamma0.3D1500.json  MPbrownianL100Delta1h0.5gamma0.4D3000.json  MPbrownianL100Delta1h0.5gamma0.5D1500.json  MPbrownianL100Delta1h0.5gamma0.5D3000.json  MPbrownianL100Delta1h0.5gamma0.6D1500.json  MPbrownianL100Delta1h0.5gamma0.7D1500.json  MPbrownianL100Delta1h0.5gamma0.7D2000.json  MPbrownianL100Delta1h0.5gamma0.7D3500.json  MPbrownianL100Delta1h0.5gamma0.7D4000.json  MPbrownianL100Delta1h0.5gamma0.82D400.json  MPbrownianL100Delta1h0.5gamma0.88D400.json  MPbrownianL100Delta1h0.5gamma0.88D800.json  MPbrownianL100Delta1h0.5gamma0.8D1500.json  MPbrownianL100Delta1h0.5gamma0.8D2000.json  MPbrownianL100Delta1h0.5gamma0.8D800.json  MPbrownianL100Delta1h0.5gamma0.91D800.json  MPbrownianL100Delta1h0.5gamma0.94D1500.json  MPbrownianL100Delta1h0.5gamma0.97D400.json  MPbrownianL100Delta1h0.5gamma0.9D1500.json  MPbrownianL100Delta1h0.5gamma0.9D3000.json  MPbrownianL100Delta1h0.5gamma0.9D5000.json  MPbrownianL100Delta1h0.5gamma0.9D800.json  MPbrownianL100Delta1h0.5gamma0D1001.json  MPbrownianL100Delta1h0.5gamma0D400.json  MPbrownianL128Delta1h0.5gamma0.03D1500.json  MPbrownianL128Delta1h0.5gamma0.03D20.json  (+1667 more)
debug/: .ninja_deps  .ninja_log  CMakeCache.txt  PM.json  S2sym.json  a.out  build.ninja  cmake_install.cmake  dump_test  ee  mp0.json  pm1.json  pm2.json  pm3.json
debug/.cmake/api/v1/reply/: cache-v2-8ca18416e75df0c7eed3.json  cmakeFiles-v1-0446e829f99c23e8bc39.json  (+10 more)
debug/.temp/: lenv0.gqten  lenv1.gqten  renv10.gqten  renv11.gqten  renv12.gqten  renv13.gqten  renv2.gqten  renv3.gqten  renv4.gqten  renv5.gqten  renv6.gqten  renv7.gqten  renv8.gqten  renv9.gqten
debug/mps/: mps_ten1.gqten  mps_ten10.gqten  mps_ten11.gqten  mps_ten12.gqten  mps_ten13.gqten  mps_ten14.gqten  mps_ten2.gqten  mps_ten3.gqten  mps_ten4.gqten  mps_ten5.gqten  mps_ten6.gqten  mps_ten7.gqten  mps_ten8.gqten  mps_ten9.gqten
note/: quantum channel_SKJ.pptx  ~$quantum channel_SKJ.pptx
note_figure/: S2symbrownianL100Delta1h0.5gamma0.1D1500.eps  S2symbrownianL100Delta1h0.5gamma0.1D2500.eps  S2symbrownianL100Delta1h0.5gamma0.2D1500.eps  S2symbrownianL100Delta1h0.5gamma0.2D800.eps  S2symbrownianL100Delta1h0.5gamma0.3D1500.eps  S2symbrownianL100Delta1h0.5gamma0.3D400.eps  S2symbrownianL100Delta1h0.5gamma0.4D1500.eps  S2symbrownianL100Delta1h0.5gamma0.4D400.eps  S2symbrownianL100Delta1h0.5gamma0.5D1000.eps  S2symbrownianL100Delta1h0.5gamma0.7D1500.eps  S2symbrownianL100Delta1h0.5gamma0.7D2000.eps  S2symbrownianL100Delta1h0.5gamma0.8D1500.eps  S2symbrownianL100Delta1h0.5gamma0.9D800.eps  S2symbrownianL100Delta1h0.5gamma0D1001.eps  S2symbrownianL100Delta1h0.5gamma1.1D400.eps  S2symbrownianL100Delta1h0.5gamma1D1000.eps  U1brownianL100Delta1h0.5gamma0.1D1500.eps  U1brownianL100Delta1h0.5gamma0.2D1500.eps  U1brownianL100Delta1h0.5gamma0.5D1000.eps  U1brownianL100Delta1h0.5gamma0.7D1500.eps  U1brownianL100Delta1h0.5gamma0.7D2000.eps  U1brownianL100Delta1h0.5gamma0.7D2500.eps  U1brownianL100Delta1h0.5gamma0.7D3000.eps  U1brownianL100Delta1h0.5gamma0.7D4000.eps  U1brownianL100Delta1h0.5gamma0.8D1500.eps  U1brownianL100Delta1h0.5gamma0.9D800.eps  U1brownianL100Delta1h0.5gamma0D1001.eps  U1brownianL100Delta1h0.5gamma1D1000.eps  U1brownianL64Delta1h0.5gamma0.1D1499.eps  U1brownianL64Delta1h0.5gamma0.1D1500.eps  ee_brownianL100Delta1h0.5.eps  ee_brownianL100Delta1h0.5gamma0.1D1500.eps  ee_brownianL100Delta1h0.5gamma0.2D1500.eps  ee_brownianL100Delta1h0.5gamma0.2D800.eps  ee_brownianL100Delta1h0.5gamma0.3D800.eps  ee_brownianL100Delta1h0.5gamma0.5D1500.eps  ee_brownianL100Delta1h0.5gamma0.7D1500.eps  ee_brownianL100Delta1h0.5gamma0.7D2000.eps  ee_brownianL100Delta1h0.5gamma0.7D2500.eps  ee_brownianL100Delta1h0.5gamma0.eps  (+10 more)
plot/: S2_correlation.m  S2_order_parameterL100.m  S2_order_parameterL64.m  S2correlation_length.m  U1_order_parameter.m  U1_structurefactor0_vs_gammaL100.m  U1_structurefactor0_vs_gammaL64.m  U1correlation_length.m  ee_browain.m  ee_browain.py  ee_vs_gamma.m  extract_f3.m  f2_diferent_L.m  f2_zchannel_middle_bond_entanglement.m  fidelity.m  log_g.m  log_g_high_precision.m  mutual_information.m  order_parameterL32.m  order_parameterL64.m  plot_renyi2.m  plot_thermal_renyi2_entropy.m  quenched_entanglement.m  rename.py  thermal_renyi2_Heisenberg_add_Zchannel.mat
src/: brownian_fidelity.cpp  brownian_type.h  calc_entropy.h  dmrg_brownian.cpp  dmrg_heisenberg.cpp  dmrg_heisenberg_2d_obc.cpp  dmrg_ising.cpp  dump_data_test.cpp  entropy.cpp  fidelity_parameters.txt  hei_type.h  ising_type.h  measure_brownian.cpp  myutil.cpp  myutil.h  params.json  params_case.h  quench.cpp  u1u1u1u1qn.h
